--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,7 @@ name: Deploy to Vercel
 on:
   push:
     branches:
-      - main  # or the branch you want to trigger the deployment from
+      - main 
 
 jobs:
   deploy:
@@ -29,4 +29,4 @@ jobs:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
         run: |
           npm install -g vercel
-          vercel deploy --prod --token $VERCEL_TOKEN --confirm --scope your-vercel-scope
+          vercel deploy --prod --token $VERCEL_TOKEN --confirm --confirm --scope rehmankha73
