--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_SCOPE: ${{ secrets.VERCEL_SCOPE }}
         run: |
           npm install -g vercel
-          vercel deploy --prod --token $VERCEL_TOKEN --confirm --scope rehmankha73s-projects
+          vercel deploy --prod --token $VERCEL_TOKEN --confirm --scope $VERCEL_SCOPE
